# credit-fraud

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
notebook/: EDA.ipynb  ModelTrainer.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py
